[package]
name = "groupfinder"
version = "0.1.0"
authors = ["Phoenix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["socks"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
lazy_static = "1.4"
regex = "1"
hyper = "0.13"
